--- a/app_sin_nombre/web/index.html
+++ b/app_sin_nombre/web/index.html
@@ -30,6 +30,8 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>app_sin_nombre</title>
+
+  <meta name="google-signin-client_id" content="337177844285-hv8eqd8faj1gp2rtooa2lakbqggrmg6b.apps.googleusercontent.com" />
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
